# pyo3-polars

./: Cargo.toml  pyproject.toml  rust-toolchain.toml
example/extend_polars_python_dispatch/extend_polars/: Cargo.toml
example/io_plugin/io_plugin/: Cargo.toml
pyo3-polars/: Cargo.toml
pyo3-polars-derive/: Cargo.toml
pyo3-polars/src/: types.rs
