# adpated from https://github.com/pola-rs/polars/blob/main/py-polars/pyproject.toml

[project]
name = "pyo3-polars-dev"
version = "0.1.0"
description = "dev env for building and testing using python 3.13"
requires-python = ">=3.13"
dependencies = [
  "polars>=1.29",
  "pyarrow",
  "maturin",
  "patchelf; platform_system == 'Linux'",
  "ruff",
]

[tool.ruff]
line-length = 80
fix = true

[tool.ruff.lint]
select = [
  "E",      # pycodestyle
  "W",      # pycodestyle
  "F",      # Pyflakes
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "D",      # flake8-docstrings
  "D213",   # Augment NumPy docstring convention: Multi-line docstring summary should start at the second line
  "D417",   # Augment NumPy docstring convention: Missing argument descriptions
  "I",      # isort
  "SIM",    # flake8-simplify
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "PT",     # flake8-pytest-style
  "RUF",    # Ruff-specific rules
  "PTH",    # flake8-use-pathlib
  "FA",     # flake8-future-annotations
  "PIE",    # flake8-pie
  "TD",     # flake8-todos
  "TRY",    # tryceratops
  "EM",     # flake8-errmsg
  "FBT001", # flake8-boolean-trap
]

ignore = [
  # Line length regulated by formatter
  "E501",
  # pydocstyle: http://www.pydocstyle.org/en/stable/error_codes.html
  "D401", # Relax NumPy docstring convention: First line should be in imperative mood
  # flake8-pytest-style:
  "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
  # flake8-simplify
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  "SIM108", # Use ternary operator
  # ruff
  "RUF005", # unpack-instead-of-concatenating-to-collection-literal
  # pycodestyle
  # TODO: Remove errors below to further improve docstring linting
  # Ordered from most common to least common errors.
  "D105", # Missing docstring in magic method
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  # flake8-todos
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  # tryceratops
  "TRY003", # Avoid specifying long messages outside the exception class
  # Lints below are turned off because of conflicts with the ruff formatter
  "D206",
  "W191",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D102", "D103", "B018", "FBT001"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
  # Default to running fast tests only. To run ALL tests, run: pytest -m ""
  "-m not slow and not hypothesis and not release and not write_disk and not docs",
]
markers = [
  # "write_disk: Tests that write to disk",
  # "slow: Tests with a longer than average runtime.",
  # "release: Tests that should be run on a release build.",
  # "debug: Tests that should be run on a debug build.",
  # "docs: Documentation code snippets",
]
filterwarnings = [
  # Fail on warnings
  "error",
  # Allow debugging in an IPython console
  "ignore:.*unrecognized arguments.*PyDevIPCompleter:DeprecationWarning",
  # Introspection under PyCharm IDE can generate this in Python 3.12
  "ignore:.*co_lnotab is deprecated, use co_lines.*:DeprecationWarning",
]
xfail_strict = true

[tool.coverage.report]
fail_under    = 85
skip_covered  = true
show_missing  = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
